<resources>
    <string name="app_name">DigiPharma-vendor</string>
    <string name="log_in">Log In</string>
    <string name="access_your_account">Access Your Account</string>
    <string name="please_enter_your_email_password_to_log_in">Please enter your email address and password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password?</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_here">Reset Here</string>
    <string name="please_fill_in_the_following_details">Please fill in the following details</string>
    <string name="hello_there">Hello There,</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
</resources>
