<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:background="@drawable/bg_login"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="24dp"
                android:id="@+id/guideline_left"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_right"
                app:layout_constraintGuide_end="24dp"/>

        <TextView android:layout_width="wrap_content"
                  android:textColor="#fff"
                  android:text="@string/hello_there"
                  android:textSize="24sp"
                  android:layout_height="wrap_content"
                  app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                  app:layout_constraintStart_toStartOf="@+id/guideline_left" android:id="@+id/textView"
                  android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/please_fill_in_the_following_details"
                  android:textSize="18sp"
                  android:textColor="#fff"
                  android:textScaleX="1.03"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/textView"
                  app:layout_constraintStart_toStartOf="@+id/guideline_left"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.436"
                  android:id="@+id/textView2"/>

        <EditText android:layout_width="0dp"
                  android:id="@+id/et_firstname"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
                  app:layout_constraintStart_toStartOf="@id/guideline_left"
                  app:layout_constraintEnd_toStartOf="@id/guideline_right"
                  android:hint="@string/first_name"
                  android:background="@drawable/et_bg"
                  android:inputType="textPersonName"
                  android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <EditText
                android:id="@+id/et_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:hint="@string/last_name"
                android:padding="16dp"
                android:background="@drawable/et_bg"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_firstname"/>

        <EditText
                android:id="@+id/et_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:hint="@string/email_address"
                android:padding="16dp"
                android:background="@drawable/et_bg"
                android:inputType="textEmailAddress"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_lastname"/>

        <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:hint="@string/phone_number"
                android:padding="16dp"
                android:background="@drawable/et_bg"
                android:inputType="phone"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email_address"/>

        <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:hint="Password"
                android:padding="16dp"
                android:background="@drawable/et_bg"
                android:inputType="textPassword"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number"/>

        <Button
                android:id="@+id/btn_login"
                android:background="@drawable/btn_bg"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium"
                android:text="Register"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_password"/>

        <TextView
                android:id="@+id/tv_register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:textColor="#D1D117"
                android:text="Log In"
                app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="59dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textColor="@color/login_form_details_medium"
                  android:text="Already Have An Account? "
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" android:id="@+id/textView3"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintEnd_toStartOf="@+id/tv_register_here"
                  app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginBottom="59dp"
                  app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>